// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders FB login correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  onPress={[Function]}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    <Icon
      name="Facebook"
      size={12}
    />
      Facebook
  </Text>
</TouchableOpacity>
`;

exports[`renders Google login correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  focusedOpacity={0.7}
  onPress={[Function]}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    <Icon
      name="Google"
      size={12}
    />
      Google
  </Text>
</TouchableOpacity>
`;

exports[`renders Login correctly 1`] = `
<ScrollViewMock
  contentContainerStyle={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    source={1}
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    Log in to Hylo
  </Text>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Your email address
    </Text>
  </View>
  <View>
    <View>
      <View>
        <TextInput
          autoCapitalize="none"
          keyboardType="email-address"
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          returnKeyType="next"
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
      <View />
    </View>
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Password
    </Text>
  </View>
  <View>
    <View>
      <View>
        <TextInput
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          returnKeyType="go"
          secureTextEntry={true}
          selectTextOnFocus={true}
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
      <View>
        <Icon
          allowFontScaling={false}
          name="eye"
          onPress={[Function]}
          size={12}
        />
      </View>
    </View>
  </View>
  <View>
    <View>
      <TouchableOpacity
        activeOpacity={0.2}
        focusedOpacity={0.7}
        onPress={[Function]}
      >
        <View>
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
          >
            Log In
          </Text>
        </View>
      </TouchableOpacity>
    </View>
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Or connect with:
    </Text>
  </View>
  <View>
    <FbLoginButton
      onLoginFinished={undefined}
    />
    <GoogleLoginButton
      onLoginFinished={undefined}
    />
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Don't have an account? 
    </Text>
    <TouchableOpacity
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onPress={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Sign up now
      </Text>
    </TouchableOpacity>
  </View>
</ScrollViewMock>
`;
